2004/04/28
	* toplevel.h/cpp, kcachegrindui.rc
	  - Switching Layouts
	* multiview.cpp: Removed some qDebug's
	* Same term fixes

2004/04/26
	* cachegrindloader.cpp, fixcost.cpp:
	  - Allow Ranges in Subposition Spec, currently not used
	  - Correctly parse "Desc: Trigger:"
	  - Allow Event Spec (Long Name, Formula) with "event:"
	* listutils.cpp:
	  - make level meters for costs only 1 bar
	    (2 with upper from 0..50%, lower 50%..100% is really confusing)
	  - Besides from Call graph and Tree maps, truncate bars to
	    only use needed size (removes lots of empty rectangles)
	* CallGraphView:
	  - some fixes when no data is loaded
	* functionselection.cpp (Function Profile)
	  - activation on mouse release to allow for context menu
	* tracedata.cpp
	  - more robust parsing of events lists
	  - Introduction of Ranges (not currently used)
	* utils.cpp:
	  - more robust parsing functions	

2004/04/05
	* CallGraphView:
	  - Add Context menu item "Export as Image"
	  - Hide Birdseye-View if call-graph fits into widget
	  - Error messages in Canvas when something goes wrong
        * Some Fixes, qDebug->kdDebug

2004/04/02
	* In most views columns for 2nd Event Type added
	* Context menus modified to allow quick change of 2nd Event Type
	* Toolbar simplified (only most used actions)
	* Terminology fixes ("cost type"->"event type",
          "trace data"->"profile data", long names of Ir,Dr,...)
	* Sorting costs in lists is always descending now
	* New File menu item: "Add..." other profile data to current window
        * Detect Cachegrind format by "events:" content, not file name
	  Allows for arbitrary names of profile data files.

2004/03/25
	* New Class Addr as wrapper for memory addresses. Use 64bit
	  to allow loading of data produced on 64bit architectures

2004/03/17

	* costtypeview.cpp, tracedata.h/cpp:
	  Fixed deletion of custom types
	* cachegrindloader.cpp, tracedata.h/cpp:
	  Moved String compression handling in Cachegrind files
	  to CachegrindLoader