@@ -1,3 +1,9 @@
+2004/05/13
+	* cachegrindloader.cpp
+	  Fix crash (jump target was not created on demand)
+	* tracedata.cpp
+	  Fix bug sometimes claiming source not existing
+
 2004/04/28
 	* toplevel.h/cpp, kcachegrindui.rc
 	  - Switching Layouts
